--- a/0x01-shell_permissions/README
+++ b/0x01-shell_permissions/README
@@ -3,4 +3,5 @@
   Script that adds execute permission to the owner of the file "hello"
   Script that adds execute permissions to the owner and group, and read permission to other users, to the file hello
   Script that adds execution permission to the owner, the group owner and others, to the file hello
-  Script that sets the permission to the file hello as follows: Owner - no permission. Group - no permission. Other - all the permissions
+  Script that sets the permission to the file hello as follows: Owner - no permission. Group - no permission. Other Users - all the perm  issions
+  Scripts that sets the mode of the file hello to this: -rwxr-x-wx 1 julien julien 23 rep 20 14:25 hello
