--- a/0x01-shell_permissions/README
+++ b/0x01-shell_permissions/README
@@ -6,3 +6,4 @@
   Script that sets the permission to the file hello as follows: Owner - no permission. Group - no permission. Other Users - all the perm  issions
   Scripts that sets the mode of the file hello to this: -rwxr-x-wx 1 julien julien 23 rep 20 14:25 hello
   Script that sets the mode of the file hello the same as olleh's mode
+  Script that adds executepermissions to all subdirectories of the current directory for the o, g, and o. Regular files should not be ch  anged
