--- a/0x01-shell_permissions/README
+++ b/0x01-shell_permissions/README
@@ -7,3 +7,4 @@
   Scripts that sets the mode of the file hello to this: -rwxr-x-wx 1 julien julien 23 rep 20 14:25 hello
   Script that sets the mode of the file hello the same as olleh's mode
   Script that adds executepermissions to all subdirectories of the current directory for the o, g, and o. Regular files should not be ch  anged
+  Script that creates a directory called my_dir with permissions 751 in the directory
