--- a/0x01-shell_permissions/README
+++ b/0x01-shell_permissions/README
@@ -9,3 +9,4 @@
   Script that adds executepermissions to all subdirectories of the current directory for the o, g, and o. Regular files should not be ch  anged
   Script that creates a directory called my_dir with permissions 751 in the directory
   Script that changes the group owner to school for the file hello
+  Script thta changes t he owner to vincent and the group owner to staff for all the files and directories in the working directory
