--- a/0x01-shell_permissions/README
+++ b/0x01-shell_permissions/README
@@ -10,3 +10,4 @@
   Script that creates a directory called my_dir with permissions 751 in the directory
   Script that changes the group owner to school for the file hello
   Script thta changes t he owner to vincent and the group owner to staff for all the files and directories in the working directory
+  Script that changes the owner and the group owner of _hello to vincent and staff respectively
