switch user to betty

--- a/0x01-shell_permissions/README
+++ b/0x01-shell_permissions/README
@@ -1,3 +1,4 @@
+  Script that switches the current user to the user betty 
   Script that changes the owner of a file "hello" to the user "betty"
   Script thta creates an empty file called hello
   Script that adds execute permission to the owner of the file "hello"
