--- a/0x02-shell_redirections/README
+++ b/0x02-shell_redirections/README
@@ -8,3 +8,4 @@
 	Write a shell script thta creates a file named \*\\'"Best School"\'\\*$\?\*\*\*\*\*:) .
 	Write a script that writes into the file ls_cwd_content the result of the command ls -la. If the file ls_cwd_content already exist it should be overwritten. if the file ls_cwd_content does not exist, create it.
 	Write a script that duplicates the last line of the file iacta.
+	Write a script that deletes all the regular files (not the directories)with .js extension tha are present in the current directory and all its subfolders.
