--- a/0x02-shell_redirections/README
+++ b/0x02-shell_redirections/README
@@ -10,3 +10,4 @@
 	Write a script that duplicates the last line of the file iacta.
 	Write a script that deletes all the regular files (not the directories)with .js extension tha are present in the current directory and all its subfolders.
 	Write a script that counts the number of directories and subdirectories in the current directory.
+	Create a script that displays the 10 newest filesin the current directory.
