--- a/0x02-shell_redirections/README
+++ b/0x02-shell_redirections/README
@@ -12,3 +12,4 @@
 	Write a script that counts the number of directories and subdirectories in the current directory.
 	Create a script that displays the 10 newest filesin the current directory.
 	Create a script that takes a list of words as input nd prints only words that appear exactly once.
+	Display lines containing the pattern "root" from the file /etc/passwd.
