count lines that contain "bin" in /etc/passwd

--- a/0x02-shell_redirections/README
+++ b/0x02-shell_redirections/README
@@ -13,3 +13,4 @@
 	Create a script that displays the 10 newest filesin the current directory.
 	Create a script that takes a list of words as input nd prints only words that appear exactly once.
 	Display lines containing the pattern "root" from the file /etc/passwd.
+	Display the number of lines that contain the pattern "bin" in the file /etc/passwd
