--- a/0x02-shell_redirections/README
+++ b/0x02-shell_redirections/README
@@ -14,3 +14,4 @@
 	Create a script that takes a list of words as input nd prints only words that appear exactly once.
 	Display lines containing the pattern "root" from the file /etc/passwd.
 	Display the number of lines that contain the pattern "bin" in the file /etc/passwd
+	Display lines containing the pattern "root" and 3 lines after them in the file /etc/passwd.
