--- a/0x02-shell_redirections/README
+++ b/0x02-shell_redirections/README
@@ -18,4 +18,5 @@
 	Display all the lines in the file /etc/passwd that do not contain the pattern "bin".
 	Display all lines of the file /etc/ssh/sshd_config starting with a letter.
 	Replace all charracterss A and C from input to Z and e respectively.
-	Create a script that removes all letters c and C from input
+	Create a script that removes all letters c and C from input.
+	Write a script that reverse its input.
