--- a/0x02-shell_redirections/README
+++ b/0x02-shell_redirections/README
@@ -20,3 +20,5 @@
 	Replace all charracterss A and C from input to Z and e respectively.
 	Create a script that removes all letters c and C from input.
 	Write a script that reverse its input.
+	Write a script that displays all users and their home directories sorted by users.
+	Write a command thta finds all empty files and directories in the current directory and all sub-directories.
