--- a/0x02-shell_redirections/README
+++ b/0x02-shell_redirections/README
@@ -22,3 +22,4 @@
 	Write a script that reverse its input.
 	Write a script that displays all users and their home directories sorted by users.
 	Write a command thta finds all empty files and directories in the current directory and all sub-directories.
+	Write a script thta lists all the files with a gif extendion in the current directory and all itsd subdirectories.
