--- a/0x02-shell_redirections/README
+++ b/0x02-shell_redirections/README
@@ -23,3 +23,4 @@
 	Write a script that displays all users and their home directories sorted by users.
 	Write a command thta finds all empty files and directories in the current directory and all sub-directories.
 	Write a script thta lists all the files with a gif extendion in the current directory and all itsd subdirectories.
+	Create a script that decodes acrostics that use the first letter of each line.
