--- a/0x03-shell_variables_expansions/README
+++ b/0x03-shell_variables_expansions/README
@@ -6,5 +6,8 @@
 	Create a script that lists environment variables.
 	Create a script thta list all local variables and environment variables, and functions.
 	Create a script that creates a new local variable.
-	1. Name : BEST
-	2. Value : School
+	* Name : BEST
+	* Value : School
+	Create a script that creates a new global variable.
+	* Name: BEST
+	* Value: School
